manifests/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  type: ExternalName
  externalName: 10.0.23.255
