manifests/home-assistant/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
spec:
  rules:
    - host: homeassistant.k8s.internal
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  number: 8123
            path: /
            pathType: Prefix
